force-app/main/default/objects/Consultation_Follow_up__c/Consultation_Follow_up__c.object-meta.xml
<CustomObject>
    <description>Enterprise Toronto&#39;s client consultation follow-up module.  Used to track clients who come back to ET for services.</description>
    <label>Consultation Follow-up</label>
    <nameField>
        <displayFormat>CF-{000000000}</displayFormat>
        <label>Consultation Follow-Up Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultation Follow-ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>