force-app/main/default/objects/Consultation_Follow_up__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(Consultation__r.Contact_Consultation__r.IsPersonAccount,   Consultation__r.Contact_Consultation__r.FirstName &amp; &#39; &#39;&amp; Consultation__r.Contact_Consultation__r.LastName ,Consultation__r.Contact_Consultation__r.Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>