force-app/main/default/objects/Consultation_Follow_up__c/fields/Advisors__c.field-meta.xml
<CustomField>
    <fullName>Advisors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consultation_Follow_ups</relationshipName>
    <type>Lookup</type>
</CustomField>