force-app/main/default/objects/Consultation_Follow_up__c/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <label>Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed by client</fullName>
            </value>
            <value>
                <fullName>Confirmed by advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>