force-app/main/default/objects/Consultation_Follow_up__c/fields/Consultation__c.field-meta.xml
<CustomField>
    <fullName>Consultation__c</fullName>
    <label>Consultation</label>
    <referenceTo>Consultation__c</referenceTo>
    <relationshipLabel>Consultation Follow-ups</relationshipLabel>
    <relationshipName>Consultation_Follow_ups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>