force-app/main/default/objects/Consultation_Follow_up__c/fields/Contact_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Formula__c</fullName>
    <formula>Consultation__r.Contact_Consultation__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Formula</label>
    <type>Text</type>
</CustomField>