force-app/main/default/objects/Consultation_Follow_up__c/fields/Followup_Consultation_Type__c.field-meta.xml
<CustomField>
    <fullName>Followup_Consultation_Type__c</fullName>
    <label>Follow-Up Consultation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follow-Up for walk-in clients</fullName>
            </value>
            <value>
                <fullName>Follow-up for online clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>