force-app/main/default/objects/Consultation_Follow_up__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>City Hall</fullName>
            </value>
            <value>
                <fullName>North York Civic Centre</fullName>
            </value>
            <value>
                <fullName>Scarborough Civic Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>