force-app/main/default/objects/Consultation_Follow_up__c/fields/Meeting_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Time__c</fullName>
    <label>Meeting Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        </valueSetDefinition>
    </valueSet>
</CustomField>