force-app/main/default/objects/Consultation_Follow_up__c/fields/MeetingTime__c.field-meta.xml
<CustomField>
    <fullName>MeetingTime__c</fullName>
    <label>MeetingTime</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>08 AM - 09 AM</fullName>
            </value>
            <value>
                <fullName>09 AM - 10 AM</fullName>
            </value>
            <value>
                <fullName>10 AM - 11 AM</fullName>
            </value>
            <value>
                <fullName>11 AM - 12 PM</fullName>
            </value>
            <value>
                <fullName>12 PM - 01 PM</fullName>
            </value>
            <value>
                <fullName>01 PM - 02 PM</fullName>
            </value>
            <value>
                <fullName>02 PM - 03 PM</fullName>
            </value>
            <value>
                <fullName>03 PM - 04 PM</fullName>
            </value>
            <value>
                <fullName>04 PM - 05 PM</fullName>
            </value>
            <value>
                <fullName>05 PM - 06 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>